logs/dag_id=Cricbuzz_ETL/run_id=manual__2023-12-09T02:53:49.992161+00:00/task_id=Create_match_table/attempt=1.log
[2023-12-09T08:23:53.296+0530] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Cricbuzz_ETL.Create_match_table manual__2023-12-09T02:53:49.992161+00:00 [queued]>
[2023-12-09T08:23:53.301+0530] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Cricbuzz_ETL.Create_match_table manual__2023-12-09T02:53:49.992161+00:00 [queued]>
[2023-12-09T08:23:53.301+0530] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-12-09T08:23:53.310+0530] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): Create_match_table> on 2023-12-09 02:53:49.992161+00:00
[2023-12-09T08:23:53.313+0530] {standard_task_runner.py:57} INFO - Started process 30733 to run task
[2023-12-09T08:23:53.314+0530] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'Cricbuzz_ETL', 'Create_match_table', 'manual__2023-12-09T02:53:49.992161+00:00', '--job-id', '28', '--raw', '--subdir', 'DAGS_FOLDER/Crickbuzz_dag.py', '--cfg-path', '/tmp/tmpf08v1ig3']
[2023-12-09T08:23:53.315+0530] {standard_task_runner.py:85} INFO - Job 28: Subtask Create_match_table
[2023-12-09T08:23:53.337+0530] {task_command.py:416} INFO - Running <TaskInstance: Cricbuzz_ETL.Create_match_table manual__2023-12-09T02:53:49.992161+00:00 [running]> on host Iris
[2023-12-09T08:23:53.373+0530] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='Cricbuzz_ETL' AIRFLOW_CTX_TASK_ID='Create_match_table' AIRFLOW_CTX_EXECUTION_DATE='2023-12-09T02:53:49.992161+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-12-09T02:53:49.992161+00:00'
[2023-12-09T08:23:53.373+0530] {sql.py:276} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS Match_data(
        "match_id" NUMERIC PRIMARY KEY,
        "team_a" TEXT, 
        "team_b" TEXT,
        "team_a_11" TEXT, 
        "team_b_11" TEXT, 
        "team_a_subs" TEXT, 
        "team_b_subs" TEXT,
        "series" TEXT,
        "season" TEXT, 
        "venue" TEXT, 
        "date" TEXT, 
        "toss" TEXT,
        "winner" TEXT, 
        "player_of_the_match" TEXT,
        "toss_winner" TEXT, 
        "toss_choosen TEXT"
        )
[2023-12-09T08:23:53.376+0530] {base.py:73} INFO - Using connection ID 'Cricbuzz_db' for task execution.
[2023-12-09T08:23:53.581+0530] {base.py:73} INFO - Using connection ID 'Cricbuzz_db' for task execution.
[2023-12-09T08:23:53.585+0530] {sql.py:432} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS Match_data(
        "match_id" NUMERIC PRIMARY KEY,
        "team_a" TEXT, 
        "team_b" TEXT,
        "team_a_11" TEXT, 
        "team_b_11" TEXT, 
        "team_a_subs" TEXT, 
        "team_b_subs" TEXT,
        "series" TEXT,
        "season" TEXT, 
        "venue" TEXT, 
        "date" TEXT, 
        "toss" TEXT,
        "winner" TEXT, 
        "player_of_the_match" TEXT,
        "toss_winner" TEXT, 
        "toss_choosen TEXT"
        ), parameters: None
[2023-12-09T08:23:53.586+0530] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/rajabala/Desktop/projects/Airflow/airflow_env/lib/python3.9/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/rajabala/Desktop/projects/Airflow/airflow_env/lib/python3.9/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/rajabala/Desktop/projects/Airflow/airflow_env/lib/python3.9/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 19:         )
                 ^

[2023-12-09T08:23:53.588+0530] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=Cricbuzz_ETL, task_id=Create_match_table, execution_date=20231209T025349, start_date=20231209T025353, end_date=20231209T025353
[2023-12-09T08:23:53.597+0530] {standard_task_runner.py:104} ERROR - Failed to execute job 28 for task Create_match_table (syntax error at or near ")"
LINE 19:         )
                 ^
; 30733)
[2023-12-09T08:23:53.607+0530] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-12-09T08:23:53.618+0530] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
